--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -14,6 +14,17 @@
       "temperature": "75°F",
       "equipment": "ThermoPro digital thermometer",
       "notes": "Overnight fermentation documentation showing starter activity and temperature monitoring"
+    },
+    {
+      "filename": "sourdough-starter-11.mp4",
+      "sequence": 11,
+      "start_time": "2025-08-21T16:27:53",
+      "end_time": "2025-08-22T03:50:00",
+      "type": "time-lapse",
+      "subject": "sourdough starter fermentation",
+      "temperature": "variable",
+      "equipment": "ThermoPro digital thermometer",
+      "notes": "Extended fermentation documentation with temperature monitoring"
     }
   ]
 }
