--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -5,8 +5,8 @@
     {
       "filename": "sourdough-starter-10.mp4",
       "sequence": 10,
-      "start_time": "2025-08-20T16:27:53",
-      "end_time": "2025-08-21T03:10:13",
+      "start_time": "2025-08-20T22:20:19",
+      "end_time": "2025-08-21T04:53:01",
       "duration": "10h42m",
       "duration_seconds": 38540,
       "type": "time-lapse",
@@ -53,6 +53,76 @@
       "temperature": null,
       "equipment": null,
       "notes": null
+    },
+    {
+      "filename": "sourdough-starter-15.mp4",
+      "sequence": 15,
+      "start_time": "2025-08-28T13:39:36",
+      "end_time": "2025-08-28T20:11:48",
+      "duration": "6h32m",
+      "duration_seconds": 23520,
+      "ratio": "1:2:2",
+      "type": "time-lapse",
+      "subject": "sourdough starter fermentation",
+      "temperature": "variable",
+      "equipment": "ThermoPro digital thermometer",
+      "notes": ""
+    },
+    {
+      "filename": "sourdough-starter-15.mp4",
+      "sequence": 15,
+      "start_time": "2025-08-28T13:39:36",
+      "end_time": "2025-08-28T21:11:40",
+      "duration": "7h32m",
+      "duration_seconds": 27120,
+      "ratio": "1:3:3",
+      "type": "time-lapse",
+      "subject": "sourdough starter fermentation",
+      "temperature": "variable",
+      "equipment": "ThermoPro digital thermometer",
+      "notes": ""
+    },
+    {
+      "filename": "sourdough-starter-15.mp4",
+      "sequence": 15,
+      "start_time": "2025-08-28T13:39:36",
+      "end_time": "2025-08-28T21:50:44",
+      "duration": "8h11m",
+      "duration_seconds": 29460,
+      "ratio": "1:5:5",
+      "type": "time-lapse",
+      "subject": "sourdough starter fermentation",
+      "temperature": "variable",
+      "equipment": "ThermoPro digital thermometer",
+      "notes": ""
+    },
+    {
+      "filename": "sourdough-starter-15.mp4",
+      "sequence": 15,
+      "start_time": "2025-08-28T13:39:36",
+      "end_time": "2025-08-28T22:06:28",
+      "duration": "8h27m",
+      "duration_seconds": 30420,
+      "ratio": "1:7:7",
+      "type": "time-lapse",
+      "subject": "sourdough starter fermentation",
+      "temperature": "variable",
+      "equipment": "ThermoPro digital thermometer",
+      "notes": ""
+    },
+    {
+      "filename": "sourdough-starter-15.mp4",
+      "sequence": 15,
+      "start_time": "2025-08-28T13:39:36",
+      "end_time": "2025-08-28T22:21:11",
+      "duration": "8h42m",
+      "duration_seconds": 31320,
+      "ratio": "1:10:10",
+      "type": "time-lapse",
+      "subject": "sourdough starter fermentation",
+      "temperature": "variable",
+      "equipment": "ThermoPro digital thermometer",
+      "notes": ""
     }
   ]
 }
