--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -7,8 +7,8 @@
       "sequence": 10,
       "start_time": "2025-08-20T22:20:19",
       "end_time": "2025-08-21T04:53:01",
-      "duration": "10h42m",
-      "duration_seconds": 38540,
+      "duration": "6h32m",
+      "duration_seconds": 23562,
       "type": "time-lapse",
       "subject": "sourdough starter fermentation",
       "temperature": "75°F",
@@ -58,9 +58,23 @@
       "filename": "sourdough-starter-15.mp4",
       "sequence": 15,
       "start_time": "2025-08-28T13:39:36",
+      "end_time": "2025-08-28T19:31:13",
+      "duration": "5h51m",
+      "duration_seconds": 21097,
+      "ratio": "1:1:1",
+      "type": "time-lapse",
+      "subject": "sourdough starter fermentation",
+      "temperature": "variable",
+      "equipment": "ThermoPro digital thermometer",
+      "notes": ""
+    },
+    {
+      "filename": "sourdough-starter-15.mp4",
+      "sequence": 15,
+      "start_time": "2025-08-28T13:39:36",
       "end_time": "2025-08-28T20:11:48",
       "duration": "6h32m",
-      "duration_seconds": 23520,
+      "duration_seconds": 23532,
       "ratio": "1:2:2",
       "type": "time-lapse",
       "subject": "sourdough starter fermentation",
@@ -74,7 +88,7 @@
       "start_time": "2025-08-28T13:39:36",
       "end_time": "2025-08-28T21:11:40",
       "duration": "7h32m",
-      "duration_seconds": 27120,
+      "duration_seconds": 27124,
       "ratio": "1:3:3",
       "type": "time-lapse",
       "subject": "sourdough starter fermentation",
@@ -88,7 +102,7 @@
       "start_time": "2025-08-28T13:39:36",
       "end_time": "2025-08-28T21:50:44",
       "duration": "8h11m",
-      "duration_seconds": 29460,
+      "duration_seconds": 29468,
       "ratio": "1:5:5",
       "type": "time-lapse",
       "subject": "sourdough starter fermentation",
@@ -101,8 +115,8 @@
       "sequence": 15,
       "start_time": "2025-08-28T13:39:36",
       "end_time": "2025-08-28T22:06:28",
-      "duration": "8h27m",
-      "duration_seconds": 30420,
+      "duration": "8h26m",
+      "duration_seconds": 30412,
       "ratio": "1:7:7",
       "type": "time-lapse",
       "subject": "sourdough starter fermentation",
@@ -115,8 +129,8 @@
       "sequence": 15,
       "start_time": "2025-08-28T13:39:36",
       "end_time": "2025-08-28T22:21:11",
-      "duration": "8h42m",
-      "duration_seconds": 31320,
+      "duration": "8h41m",
+      "duration_seconds": 31295,
       "ratio": "1:10:10",
       "type": "time-lapse",
       "subject": "sourdough starter fermentation",
