--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -62,6 +62,7 @@
       "duration": "5h51m",
       "duration_seconds": 21097,
       "ratio": "1:1:1",
+      "starter_grams": "8",
       "type": "time-lapse",
       "subject": "sourdough starter fermentation",
       "temperature": "variable",
@@ -76,6 +77,7 @@
       "duration": "7h39m",
       "duration_seconds": 27581,
       "ratio": "1:2:2",
+      "starter_grams": "8",
       "type": "time-lapse",
       "subject": "sourdough starter fermentation",
       "temperature": "variable",
@@ -90,6 +92,7 @@
       "duration": "7h51m",
       "duration_seconds": 28260,
       "ratio": "1:3:3",
+      "starter_grams": "8",
       "type": "time-lapse",
       "subject": "sourdough starter fermentation",
       "temperature": "variable",
@@ -104,6 +107,7 @@
       "duration": "8h27m",
       "duration_seconds": 30473,
       "ratio": "1:5:5",
+      "starter_grams": "8",
       "type": "time-lapse",
       "subject": "sourdough starter fermentation",
       "temperature": "variable",
@@ -118,6 +122,7 @@
       "duration": "8h26m",
       "duration_seconds": 30412,
       "ratio": "1:7:7",
+      "starter_grams": "8",
       "type": "time-lapse",
       "subject": "sourdough starter fermentation",
       "temperature": "variable",
@@ -132,6 +137,7 @@
       "duration": "8h34m",
       "duration_seconds": 30869,
       "ratio": "1:10:10",
+      "starter_grams": "8",
       "type": "time-lapse",
       "subject": "sourdough starter fermentation",
       "temperature": "variable",
@@ -146,6 +152,7 @@
       "duration": "7h33m",
       "duration_seconds": 27216,
       "ratio": "1:1:1",
+      "starter_grams": "8",
       "type": "time-lapse",
       "subject": "sourdough starter fermentation",
       "temperature": "variable",
@@ -160,6 +167,7 @@
       "duration": "10h",
       "duration_seconds": 36014,
       "ratio": "1:3:3",
+      "starter_grams": "8",
       "type": "time-lapse",
       "subject": "sourdough starter fermentation",
       "temperature": "variable",
@@ -174,6 +182,7 @@
       "duration": "10h51m",
       "duration_seconds": 39089,
       "ratio": "1:5:5",
+      "starter_grams": "8",
       "type": "time-lapse",
       "subject": "sourdough starter fermentation",
       "temperature": "variable",
@@ -188,6 +197,7 @@
       "duration": "11h59m",
       "duration_seconds": 43168,
       "ratio": "1:7:7",
+      "starter_grams": "8",
       "type": "time-lapse",
       "subject": "sourdough starter fermentation",
       "temperature": "variable",
@@ -202,6 +212,7 @@
       "duration": "13h2m",
       "duration_seconds": 46974,
       "ratio": "1:10:10",
+      "starter_grams": "8",
       "type": "time-lapse",
       "subject": "sourdough starter fermentation",
       "temperature": "variable",
