--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -9,7 +9,25 @@
       "end_time": "2025-08-21T04:53:01",
       "duration": "6h32m",
       "duration_seconds": 23562,
-      "temperature": "75°F"
+      "environmental_data": {
+        "records_found": 393,
+        "temperature_f": {
+          "min": 73.8,
+          "max": 75.6,
+          "mean": 74.6,
+          "median": 74.5,
+          "std": 0.54,
+          "mode": 75.0
+        },
+        "humidity_pct": {
+          "min": 36,
+          "max": 49,
+          "mean": 42.7,
+          "median": 44.0,
+          "std": 4.43,
+          "mode": 47
+        }
+      }
     },
     {
       "filename": "sourdough-starter-11.mp4",
@@ -17,7 +35,26 @@
       "start_time": "2025-08-21T16:27:53",
       "end_time": "2025-08-22T03:50:00",
       "duration_seconds": 40927,
-      "duration": "11h22m"
+      "duration": "11h22m",
+      "environmental_data": {
+        "records_found": 683,
+        "temperature_f": {
+          "min": 70.5,
+          "max": 77.9,
+          "mean": 73.9,
+          "median": 74.5,
+          "std": 1.92,
+          "mode": 74.5
+        },
+        "humidity_pct": {
+          "min": 46,
+          "max": 51,
+          "mean": 48.8,
+          "median": 49.0,
+          "std": 1.26,
+          "mode": 50
+        }
+      }
     },
     {
       "filename": "sourdough-starter-12.mp4",
@@ -26,7 +63,26 @@
       "end_time": "2025-08-22T21:28:01",
       "duration": "6h56m",
       "duration_seconds": 24993,
-      "notes": "ThermoPro was not measuring this starter during this run, it was measuring ovent temp while learning about the heatpad"
+      "notes": "ThermoPro was not measuring this starter during this run, it was measuring ovent temp while learning about the heatpad",
+      "environmental_data": {
+        "records_found": 417,
+        "temperature_f": {
+          "min": 72.0,
+          "max": 86.2,
+          "mean": 76.1,
+          "median": 73.4,
+          "std": 4.88,
+          "mode": 72.7
+        },
+        "humidity_pct": {
+          "min": 40,
+          "max": 52,
+          "mean": 48.1,
+          "median": 50.0,
+          "std": 3.51,
+          "mode": 50
+        }
+      }
     },
     {
       "filename": "sourdough-starter-14.mp4",
@@ -34,7 +90,26 @@
       "start_time": "2025-08-24T13:37:48",
       "end_time": "2025-08-25T07:15:41",
       "duration": "17h37m",
-      "duration_seconds": 63473
+      "duration_seconds": 63473,
+      "environmental_data": {
+        "records_found": 1058,
+        "temperature_f": {
+          "min": 78.8,
+          "max": 81.1,
+          "mean": 79.7,
+          "median": 79.5,
+          "std": 0.63,
+          "mode": 79.2
+        },
+        "humidity_pct": {
+          "min": 41,
+          "max": 49,
+          "mean": 46.1,
+          "median": 46.0,
+          "std": 1.84,
+          "mode": 46
+        }
+      }
     },
     {
       "filename": "sourdough-starter-15.mp4",
@@ -44,7 +119,26 @@
       "duration": "7h34m",
       "duration_seconds": 27276,
       "ratio": "1:1:1",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "environmental_data": {
+        "records_found": 455,
+        "temperature_f": {
+          "min": 73.0,
+          "max": 77.0,
+          "mean": 74.4,
+          "median": 73.8,
+          "std": 1.17,
+          "mode": 73.2
+        },
+        "humidity_pct": {
+          "min": 56,
+          "max": 58,
+          "mean": 56.9,
+          "median": 57.0,
+          "std": 0.74,
+          "mode": 57
+        }
+      }
     },
     {
       "filename": "sourdough-starter-15.mp4",
@@ -54,7 +148,26 @@
       "duration": "7h39m",
       "duration_seconds": 27581,
       "ratio": "1:2:2",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "environmental_data": {
+        "records_found": 460,
+        "temperature_f": {
+          "min": 73.0,
+          "max": 77.0,
+          "mean": 74.4,
+          "median": 73.8,
+          "std": 1.19,
+          "mode": 73.2
+        },
+        "humidity_pct": {
+          "min": 56,
+          "max": 58,
+          "mean": 56.9,
+          "median": 57.0,
+          "std": 0.74,
+          "mode": 57
+        }
+      }
     },
     {
       "filename": "sourdough-starter-15.mp4",
@@ -64,7 +177,26 @@
       "duration": "7h51m",
       "duration_seconds": 28260,
       "ratio": "1:3:3",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "environmental_data": {
+        "records_found": 471,
+        "temperature_f": {
+          "min": 73.0,
+          "max": 77.0,
+          "mean": 74.5,
+          "median": 73.8,
+          "std": 1.24,
+          "mode": 73.2
+        },
+        "humidity_pct": {
+          "min": 56,
+          "max": 58,
+          "mean": 56.9,
+          "median": 57.0,
+          "std": 0.75,
+          "mode": 57
+        }
+      }
     },
     {
       "filename": "sourdough-starter-15.mp4",
@@ -74,7 +206,26 @@
       "duration": "8h27m",
       "duration_seconds": 30473,
       "ratio": "1:5:5",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "environmental_data": {
+        "records_found": 508,
+        "temperature_f": {
+          "min": 73.0,
+          "max": 77.0,
+          "mean": 74.6,
+          "median": 73.9,
+          "std": 1.35,
+          "mode": 73.2
+        },
+        "humidity_pct": {
+          "min": 56,
+          "max": 58,
+          "mean": 56.8,
+          "median": 57.0,
+          "std": 0.76,
+          "mode": 57
+        }
+      }
     },
     {
       "filename": "sourdough-starter-15.mp4",
@@ -84,7 +235,26 @@
       "duration": "8h26m",
       "duration_seconds": 30412,
       "ratio": "1:7:7",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "environmental_data": {
+        "records_found": 507,
+        "temperature_f": {
+          "min": 73.0,
+          "max": 77.0,
+          "mean": 74.6,
+          "median": 73.9,
+          "std": 1.35,
+          "mode": 73.2
+        },
+        "humidity_pct": {
+          "min": 56,
+          "max": 58,
+          "mean": 56.8,
+          "median": 57.0,
+          "std": 0.76,
+          "mode": 57
+        }
+      }
     },
     {
       "filename": "sourdough-starter-15.mp4",
@@ -94,7 +264,26 @@
       "duration": "8h34m",
       "duration_seconds": 30869,
       "ratio": "1:10:10",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "environmental_data": {
+        "records_found": 515,
+        "temperature_f": {
+          "min": 73.0,
+          "max": 77.0,
+          "mean": 74.7,
+          "median": 74.1,
+          "std": 1.36,
+          "mode": 73.2
+        },
+        "humidity_pct": {
+          "min": 56,
+          "max": 58,
+          "mean": 56.8,
+          "median": 57.0,
+          "std": 0.76,
+          "mode": 57
+        }
+      }
     },
     {
       "filename": "sourdough-starter-17.mp4",
@@ -105,7 +294,26 @@
       "duration_seconds": 27216,
       "ratio": "1:1:1",
       "starter_grams": "8",
-      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring"
+      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring",
+      "environmental_data": {
+        "records_found": 454,
+        "temperature_f": {
+          "min": 70.9,
+          "max": 77.9,
+          "mean": 76.5,
+          "median": 77.4,
+          "std": 1.88,
+          "mode": 77.5
+        },
+        "humidity_pct": {
+          "min": 54,
+          "max": 71,
+          "mean": 58.2,
+          "median": 56.0,
+          "std": 4.54,
+          "mode": 56
+        }
+      }
     },
     {
       "filename": "sourdough-starter-17.mp4",
@@ -116,7 +324,26 @@
       "duration_seconds": 35223,
       "ratio": "1:3:3",
       "starter_grams": "8",
-      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring"
+      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring",
+      "environmental_data": {
+        "records_found": 587,
+        "temperature_f": {
+          "min": 71.2,
+          "max": 78.1,
+          "mean": 76.9,
+          "median": 77.4,
+          "std": 1.48,
+          "mode": 77.5
+        },
+        "humidity_pct": {
+          "min": 54,
+          "max": 71,
+          "mean": 57.4,
+          "median": 56.0,
+          "std": 3.71,
+          "mode": 56
+        }
+      }
     },
     {
       "filename": "sourdough-starter-17.mp4",
@@ -127,7 +354,26 @@
       "duration_seconds": 39089,
       "ratio": "1:5:5",
       "starter_grams": "8",
-      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring"
+      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring",
+      "environmental_data": {
+        "records_found": 652,
+        "temperature_f": {
+          "min": 70.9,
+          "max": 78.1,
+          "mean": 76.8,
+          "median": 77.4,
+          "std": 1.64,
+          "mode": 77.5
+        },
+        "humidity_pct": {
+          "min": 54,
+          "max": 71,
+          "mean": 57.5,
+          "median": 56.0,
+          "std": 3.95,
+          "mode": 56
+        }
+      }
     },
     {
       "filename": "sourdough-starter-17.mp4",
@@ -138,7 +384,26 @@
       "duration_seconds": 39059,
       "ratio": "1:7:7",
       "starter_grams": "8",
-      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring"
+      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring",
+      "environmental_data": {
+        "records_found": 651,
+        "temperature_f": {
+          "min": 71.4,
+          "max": 78.1,
+          "mean": 77.0,
+          "median": 77.4,
+          "std": 1.29,
+          "mode": 77.5
+        },
+        "humidity_pct": {
+          "min": 54,
+          "max": 71,
+          "mean": 57.1,
+          "median": 56.0,
+          "std": 3.35,
+          "mode": 56
+        }
+      }
     },
     {
       "filename": "sourdough-starter-17.mp4",
@@ -149,7 +414,26 @@
       "duration_seconds": 43381,
       "ratio": "1:10:10",
       "starter_grams": "8",
-      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring"
+      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring",
+      "environmental_data": {
+        "records_found": 723,
+        "temperature_f": {
+          "min": 71.8,
+          "max": 78.1,
+          "mean": 77.0,
+          "median": 77.4,
+          "std": 1.04,
+          "mode": 77.5
+        },
+        "humidity_pct": {
+          "min": 54,
+          "max": 71,
+          "mean": 56.7,
+          "median": 56.0,
+          "std": 2.83,
+          "mode": 56
+        }
+      }
     }
   ]
 }
