--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -471,6 +471,156 @@
       }
     },
     {
+      "filename": "sourdough-starter-19.mp4",
+      "sequence": 19,
+      "recipe": "arachnophobia",
+      "start_time": "2025-09-07T16:11:46",
+      "end_time": "2025-09-08T02:18:06",
+      "duration": "10h6m",
+      "duration_seconds": 36380,
+      "ratio": "1:1:1",
+      "starter_grams": "8",
+      "environmental_data": {
+        "records_found": 607,
+        "temperature_f": {
+          "min": 70.9,
+          "max": 75.6,
+          "mean": 72.8,
+          "median": 72.5,
+          "std": 1.62,
+          "mode": 71.2
+        },
+        "humidity_pct": {
+          "min": 55,
+          "max": 70,
+          "mean": 62.2,
+          "median": 62.0,
+          "std": 4.15,
+          "mode": 62
+        }
+      }
+    },
+    {
+      "filename": "sourdough-starter-19.mp4",
+      "sequence": 19,
+      "recipe": "arachnophobia",
+      "start_time": "2025-09-07T16:32:04",
+      "end_time": "2025-09-08T03:52:48",
+      "duration": "11h20m",
+      "duration_seconds": 40844,
+      "ratio": "1:7:7",
+      "starter_grams": "8",
+      "environmental_data": {
+        "records_found": 680,
+        "temperature_f": {
+          "min": 70.9,
+          "max": 75.6,
+          "mean": 73.0,
+          "median": 73.0,
+          "std": 1.57,
+          "mode": 71.2
+        },
+        "humidity_pct": {
+          "min": 55,
+          "max": 70,
+          "mean": 61.4,
+          "median": 62.0,
+          "std": 4.36,
+          "mode": 62
+        }
+      }
+    },
+    {
+      "filename": "sourdough-starter-19.mp4",
+      "sequence": 19,
+      "recipe": "arachnophobia",
+      "start_time": "2025-09-07T16:17:52",
+      "end_time": "2025-09-08T02:58:11",
+      "duration": "10h40m",
+      "duration_seconds": 38419,
+      "ratio": "1:3:3",
+      "starter_grams": "8",
+      "environmental_data": {
+        "records_found": 641,
+        "temperature_f": {
+          "min": 70.9,
+          "max": 75.6,
+          "mean": 73.0,
+          "median": 72.7,
+          "std": 1.64,
+          "mode": 71.2
+        },
+        "humidity_pct": {
+          "min": 55,
+          "max": 70,
+          "mean": 61.8,
+          "median": 62.0,
+          "std": 4.32,
+          "mode": 62
+        }
+      }
+    },
+    {
+      "filename": "sourdough-starter-19.mp4",
+      "sequence": 19,
+      "recipe": "arachnophobia",
+      "start_time": "2025-09-07T16:25:28",
+      "end_time": "2025-09-08T03:20:30",
+      "duration": "10h55m",
+      "duration_seconds": 39302,
+      "ratio": "1:5:5",
+      "starter_grams": "8",
+      "environmental_data": {
+        "records_found": 655,
+        "temperature_f": {
+          "min": 70.9,
+          "max": 75.6,
+          "mean": 73.0,
+          "median": 72.7,
+          "std": 1.61,
+          "mode": 71.2
+        },
+        "humidity_pct": {
+          "min": 55,
+          "max": 70,
+          "mean": 61.6,
+          "median": 62.0,
+          "std": 4.35,
+          "mode": 62
+        }
+      }
+    },
+    {
+      "filename": "sourdough-starter-19.mp4",
+      "sequence": 19,
+      "recipe": "arachnophobia",
+      "start_time": "2025-09-07T16:38:40",
+      "end_time": "2025-09-08T03:44:21",
+      "duration": "11h5m",
+      "duration_seconds": 39941,
+      "ratio": "1:10:10",
+      "starter_grams": "8",
+      "environmental_data": {
+        "records_found": 666,
+        "temperature_f": {
+          "min": 70.9,
+          "max": 75.6,
+          "mean": 73.0,
+          "median": 73.0,
+          "std": 1.57,
+          "mode": 71.2
+        },
+        "humidity_pct": {
+          "min": 55,
+          "max": 70,
+          "mean": 61.4,
+          "median": 62.0,
+          "std": 4.39,
+          "mode": 62
+        }
+      }
+    },
+    {
       "filename": "sourdough-starter-18.mp4",
       "sequence": 18,
       "recipe": "arachnophobia",
