--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -656,8 +656,8 @@
       "recipe": "arachnophobia",
       "start_time": "2025-09-09T08:56:20",
       "end_time": "2025-09-10T01:35:33",
-      "duration": "",
-      "duration_seconds": 66700,
+      "duration": "16h39m",
+      "duration_seconds": 59953,
       "ratio": "1:10:10",
       "starter_grams": "5"
     },
@@ -667,8 +667,8 @@
       "recipe": "arachnophobia",
       "start_time": "2025-09-10T13:17:22",
       "end_time": "2025-09-10T13:17:22",
-      "duration": "",
-      "duration_seconds": 66700,
+      "duration": "0s",
+      "duration_seconds": 0,
       "ratio": "1:10:10",
       "starter_grams": "5"
     }
