--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -481,21 +481,21 @@
       "ratio": "1:1:1",
       "starter_grams": "8",
       "environmental_data": {
-        "records_found": 607,
+        "records_found": 509,
         "temperature_f": {
           "min": 70.9,
-          "max": 75.6,
-          "mean": 72.8,
-          "median": 72.5,
-          "std": 1.62,
+          "max": 75.4,
+          "mean": 72.3,
+          "median": 72.1,
+          "std": 1.23,
           "mode": 71.2
         },
         "humidity_pct": {
-          "min": 55,
+          "min": 56,
           "max": 70,
-          "mean": 62.2,
+          "mean": 63.4,
           "median": 62.0,
-          "std": 4.15,
+          "std": 3.28,
           "mode": 62
         }
       }
@@ -659,7 +659,26 @@
       "duration": "16h56m",
       "duration_seconds": 60996,
       "ratio": "1:10:10",
-      "starter_grams": "5"
+      "starter_grams": "5",
+      "environmental_data": {
+        "records_found": 1016,
+        "temperature_f": {
+          "min": 67.1,
+          "max": 71.8,
+          "mean": 69.2,
+          "median": 69.1,
+          "std": 1.59,
+          "mode": 67.6
+        },
+        "humidity_pct": {
+          "min": 62,
+          "max": 72,
+          "mean": 66.7,
+          "median": 66.0,
+          "std": 3.19,
+          "mode": 71
+        }
+      }
     }
   ]
 }
