--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -679,6 +679,17 @@
           "mode": 71
         }
       }
+    },
+    {
+      "filename": "sourdough-starter-21.mp4",
+      "sequence": 21,
+      "recipe": "arachnophobia",
+      "start_time": "2025-09-10T13:17:22",
+      "end_time": "2025-09-10T13:17:22",
+      "duration": "0s",
+      "duration_seconds": 0,
+      "ratio": "1:10:10",
+      "starter_grams": "5"
     }
   ]
 }
