--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -717,10 +717,11 @@
       "recipe": "arachnophobia",
       "start_time": "2025-09-11T20:42:37",
       "end_time": "2025-09-12T07:39:01",
+      "first_active_time": "2025-09-12T05:40:26",
       "duration": "10h56m",
       "duration_seconds": 39384,
       "ratio": "1:5.1:5.1",
       "starter_grams": "10"
-    }
+    } 
   ]
 }
