--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -204,7 +204,26 @@
       "duration": "7h51m",
       "duration_seconds": 28260,
       "ratio": "1:3:3",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "environmental_data": {
+        "records_found": 471,
+        "temperature_f": {
+          "min": 73.0,
+          "max": 77.0,
+          "mean": 74.5,
+          "median": 73.8,
+          "std": 1.24,
+          "mode": 73.2
+        },
+        "humidity_pct": {
+          "min": 56,
+          "max": 58,
+          "mean": 56.9,
+          "median": 57.0,
+          "std": 0.75,
+          "mode": 57
+        }
+      }
     },
     {
       "filename": "sourdough-starter-15.mp4",
@@ -215,7 +234,26 @@
       "duration": "8h27m",
       "duration_seconds": 30473,
       "ratio": "1:5:5",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "environmental_data": {
+        "records_found": 508,
+        "temperature_f": {
+          "min": 73.0,
+          "max": 77.0,
+          "mean": 74.6,
+          "median": 73.9,
+          "std": 1.35,
+          "mode": 73.2
+        },
+        "humidity_pct": {
+          "min": 56,
+          "max": 58,
+          "mean": 56.8,
+          "median": 57.0,
+          "std": 0.76,
+          "mode": 57
+        }
+      }
     },
     {
       "filename": "sourdough-starter-15.mp4",
@@ -226,7 +264,26 @@
       "duration": "8h26m",
       "duration_seconds": 30412,
       "ratio": "1:7:7",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "environmental_data": {
+        "records_found": 507,
+        "temperature_f": {
+          "min": 73.0,
+          "max": 77.0,
+          "mean": 74.6,
+          "median": 73.9,
+          "std": 1.35,
+          "mode": 73.2
+        },
+        "humidity_pct": {
+          "min": 56,
+          "max": 58,
+          "mean": 56.8,
+          "median": 57.0,
+          "std": 0.76,
+          "mode": 57
+        }
+      }
     },
     {
       "filename": "sourdough-starter-15.mp4",
@@ -237,7 +294,26 @@
       "duration": "8h34m",
       "duration_seconds": 30869,
       "ratio": "1:10:10",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "environmental_data": {
+        "records_found": 515,
+        "temperature_f": {
+          "min": 73.0,
+          "max": 77.0,
+          "mean": 74.7,
+          "median": 74.1,
+          "std": 1.36,
+          "mode": 73.2
+        },
+        "humidity_pct": {
+          "min": 56,
+          "max": 58,
+          "mean": 56.8,
+          "median": 57.0,
+          "std": 0.76,
+          "mode": 57
+        }
+      }
     },
     {
       "filename": "sourdough-starter-17.mp4",
@@ -249,7 +325,26 @@
       "duration_seconds": 27216,
       "ratio": "1:1:1",
       "starter_grams": "8",
-      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring"
+      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring",
+      "environmental_data": {
+        "records_found": 454,
+        "temperature_f": {
+          "min": 70.9,
+          "max": 77.9,
+          "mean": 76.5,
+          "median": 77.4,
+          "std": 1.88,
+          "mode": 77.5
+        },
+        "humidity_pct": {
+          "min": 54,
+          "max": 71,
+          "mean": 58.2,
+          "median": 56.0,
+          "std": 4.54,
+          "mode": 56
+        }
+      }
     },
     {
       "filename": "sourdough-starter-17.mp4",
@@ -261,7 +356,26 @@
       "duration_seconds": 35223,
       "ratio": "1:3:3",
       "starter_grams": "8",
-      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring"
+      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring",
+      "environmental_data": {
+        "records_found": 587,
+        "temperature_f": {
+          "min": 71.2,
+          "max": 78.1,
+          "mean": 76.9,
+          "median": 77.4,
+          "std": 1.48,
+          "mode": 77.5
+        },
+        "humidity_pct": {
+          "min": 54,
+          "max": 71,
+          "mean": 57.4,
+          "median": 56.0,
+          "std": 3.71,
+          "mode": 56
+        }
+      }
     },
     {
       "filename": "sourdough-starter-17.mp4",
@@ -273,7 +387,26 @@
       "duration_seconds": 39089,
       "ratio": "1:5:5",
       "starter_grams": "8",
-      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring"
+      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring",
+      "environmental_data": {
+        "records_found": 652,
+        "temperature_f": {
+          "min": 70.9,
+          "max": 78.1,
+          "mean": 76.8,
+          "median": 77.4,
+          "std": 1.64,
+          "mode": 77.5
+        },
+        "humidity_pct": {
+          "min": 54,
+          "max": 71,
+          "mean": 57.5,
+          "median": 56.0,
+          "std": 3.95,
+          "mode": 56
+        }
+      }
     },
     {
       "filename": "sourdough-starter-17.mp4",
@@ -285,7 +418,26 @@
       "duration_seconds": 39059,
       "ratio": "1:7:7",
       "starter_grams": "8",
-      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring"
+      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring",
+      "environmental_data": {
+        "records_found": 651,
+        "temperature_f": {
+          "min": 71.4,
+          "max": 78.1,
+          "mean": 77.0,
+          "median": 77.4,
+          "std": 1.29,
+          "mode": 77.5
+        },
+        "humidity_pct": {
+          "min": 54,
+          "max": 71,
+          "mean": 57.1,
+          "median": 56.0,
+          "std": 3.35,
+          "mode": 56
+        }
+      }
     },
     {
       "filename": "sourdough-starter-17.mp4",
@@ -297,7 +449,26 @@
       "duration_seconds": 43381,
       "ratio": "1:10:10",
       "starter_grams": "8",
-      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring"
+      "notes": "Multiple starter ratios tested simultaneously with temperature monitoring",
+      "environmental_data": {
+        "records_found": 723,
+        "temperature_f": {
+          "min": 71.8,
+          "max": 78.1,
+          "mean": 77.0,
+          "median": 77.4,
+          "std": 1.04,
+          "mode": 77.5
+        },
+        "humidity_pct": {
+          "min": 54,
+          "max": 71,
+          "mean": 56.7,
+          "median": 56.0,
+          "std": 2.83,
+          "mode": 56
+        }
+      }
     },
     {
       "filename": "sourdough-starter-19.mp4",
@@ -308,7 +479,26 @@
       "duration": "8h28m",
       "duration_seconds": 30535,
       "ratio": "1:1:1",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "environmental_data": {
+        "records_found": 509,
+        "temperature_f": {
+          "min": 70.9,
+          "max": 75.4,
+          "mean": 72.3,
+          "median": 72.1,
+          "std": 1.23,
+          "mode": 71.2
+        },
+        "humidity_pct": {
+          "min": 56,
+          "max": 70,
+          "mean": 63.4,
+          "median": 62.0,
+          "std": 3.28,
+          "mode": 62
+        }
+      }
     },
     {
       "filename": "sourdough-starter-19.mp4",
@@ -319,7 +509,26 @@
       "duration": "11h20m",
       "duration_seconds": 40844,
       "ratio": "1:7:7",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "environmental_data": {
+        "records_found": 680,
+        "temperature_f": {
+          "min": 70.9,
+          "max": 75.6,
+          "mean": 73.0,
+          "median": 73.0,
+          "std": 1.57,
+          "mode": 71.2
+        },
+        "humidity_pct": {
+          "min": 55,
+          "max": 70,
+          "mean": 61.4,
+          "median": 62.0,
+          "std": 4.36,
+          "mode": 62
+        }
+      }
     },
     {
       "filename": "sourdough-starter-19.mp4",
@@ -330,7 +539,26 @@
       "duration": "10h40m",
       "duration_seconds": 38419,
       "ratio": "1:3:3",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "environmental_data": {
+        "records_found": 641,
+        "temperature_f": {
+          "min": 70.9,
+          "max": 75.6,
+          "mean": 73.0,
+          "median": 72.7,
+          "std": 1.64,
+          "mode": 71.2
+        },
+        "humidity_pct": {
+          "min": 55,
+          "max": 70,
+          "mean": 61.8,
+          "median": 62.0,
+          "std": 4.32,
+          "mode": 62
+        }
+      }
     },
     {
       "filename": "sourdough-starter-19.mp4",
@@ -341,7 +569,26 @@
       "duration": "10h55m",
       "duration_seconds": 39302,
       "ratio": "1:5:5",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "environmental_data": {
+        "records_found": 655,
+        "temperature_f": {
+          "min": 70.9,
+          "max": 75.6,
+          "mean": 73.0,
+          "median": 72.7,
+          "std": 1.61,
+          "mode": 71.2
+        },
+        "humidity_pct": {
+          "min": 55,
+          "max": 70,
+          "mean": 61.6,
+          "median": 62.0,
+          "std": 4.35,
+          "mode": 62
+        }
+      }
     },
     {
       "filename": "sourdough-starter-19.mp4",
@@ -352,7 +599,26 @@
       "duration": "11h5m",
       "duration_seconds": 39941,
       "ratio": "1:10:10",
-      "starter_grams": "8"
+      "starter_grams": "8",
+      "environmental_data": {
+        "records_found": 666,
+        "temperature_f": {
+          "min": 70.9,
+          "max": 75.6,
+          "mean": 73.0,
+          "median": 73.0,
+          "std": 1.57,
+          "mode": 71.2
+        },
+        "humidity_pct": {
+          "min": 55,
+          "max": 70,
+          "mean": 61.4,
+          "median": 62.0,
+          "std": 4.39,
+          "mode": 62
+        }
+      }
     },
     {
       "filename": "sourdough-starter-18.mp4",
@@ -363,7 +629,26 @@
       "duration": "18h31m",
       "duration_seconds": 66700,
       "ratio": "1:5:5",
-      "starter_grams": "10"
+      "starter_grams": "10",
+      "environmental_data": {
+        "records_found": 1112,
+        "temperature_f": {
+          "min": 70.7,
+          "max": 77.2,
+          "mean": 73.8,
+          "median": 73.4,
+          "std": 2.05,
+          "mode": 72.5
+        },
+        "humidity_pct": {
+          "min": 52,
+          "max": 71,
+          "mean": 60.5,
+          "median": 61.0,
+          "std": 5.01,
+          "mode": 61
+        }
+      }
     },
     {
       "filename": "sourdough-starter-20.mp4",
@@ -374,7 +659,26 @@
       "duration": "16h56m",
       "duration_seconds": 60996,
       "ratio": "1:10:10",
-      "starter_grams": "5"
+      "starter_grams": "5",
+      "environmental_data": {
+        "records_found": 1016,
+        "temperature_f": {
+          "min": 67.1,
+          "max": 71.8,
+          "mean": 69.2,
+          "median": 69.1,
+          "std": 1.59,
+          "mode": 67.6
+        },
+        "humidity_pct": {
+          "min": 62,
+          "max": 72,
+          "mean": 66.7,
+          "median": 66.0,
+          "std": 3.19,
+          "mode": 71
+        }
+      }
     },
     {
       "filename": "sourdough-starter-21.mp4",
@@ -385,7 +689,26 @@
       "duration": "22h40m",
       "duration_seconds": 81635,
       "ratio": "1:10:10",
-      "starter_grams": "5"
+      "starter_grams": "5",
+      "environmental_data": {
+        "records_found": 1360,
+        "temperature_f": {
+          "min": 70.0,
+          "max": 73.9,
+          "mean": 72.4,
+          "median": 73.0,
+          "std": 1.32,
+          "mode": 73.6
+        },
+        "humidity_pct": {
+          "min": 56,
+          "max": 69,
+          "mean": 61.2,
+          "median": 59.0,
+          "std": 3.03,
+          "mode": 59
+        }
+      }
     },
     {
       "filename": "sourdough-starter-22.mp4",
@@ -397,19 +720,26 @@
       "duration": "20h1m",
       "duration_seconds": 72079,
       "ratio": "1:5.1:5.1",
-      "starter_grams": "10"
-    },
-    {
-      "filename": "sourdough-starter-23.mp4",
-      "sequence": 23,
-      "recipe": "arachnophobia",
-      "start_time": "2025-09-11T",
-      "end_time": "2025-09-12T",
-      "first_active_time": "",
-      "duration": "20h1m",
-      "duration_seconds": 72079,
-      "ratio": "1:5:5",
-      "starter_grams": "10"
+      "starter_grams": "10",
+      "environmental_data": {
+        "records_found": 1201,
+        "temperature_f": {
+          "min": 70.9,
+          "max": 73.8,
+          "mean": 72.4,
+          "median": 72.5,
+          "std": 1.01,
+          "mode": 71.2
+        },
+        "humidity_pct": {
+          "min": 59,
+          "max": 66,
+          "mean": 62.1,
+          "median": 62.0,
+          "std": 1.41,
+          "mode": 62
+        }
+      }
     }
   ]
 }
