--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -761,7 +761,7 @@
       "recipe": "arachnophobia",
       "start_time": "2025-09-13T21:07:31",
       "end_time": "2025-09-13T",
-      "first_active_time": "",
+      "first_active_time": "2025-09-1T06:21:21",
       "duration": "20h1m",
       "duration_seconds": 72079,
       "ratio": "1:3.1:3.1",
