--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -26,7 +26,7 @@
       "filename": "sourdough-starter-10.mp4",
       "sequence": 10,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-08-20T22:20:19",
+      "feeding_start_time": "2025-08-20T22:20:19",
       "peak_time": "2025-08-21T04:53:01",
       "duration": "6h32m",
       "duration_seconds": 23562,
@@ -54,7 +54,7 @@
       "filename": "sourdough-starter-11.mp4",
       "sequence": 11,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-08-21T16:27:53",
+      "feeding_start_time": "2025-08-21T16:27:53",
       "peak_time": "2025-08-22T03:50:00",
       "duration_seconds": 40927,
       "duration": "11h22m",
@@ -82,7 +82,7 @@
       "filename": "sourdough-starter-12.mp4",
       "sequence": 12,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-08-22T14:31:28",
+      "feeding_start_time": "2025-08-22T14:31:28",
       "peak_time": "2025-08-22T21:28:01",
       "duration": "6h56m",
       "duration_seconds": 24993,
@@ -111,7 +111,7 @@
       "filename": "sourdough-starter-14.mp4",
       "sequence": 14,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-08-24T13:37:48",
+      "feeding_start_time": "2025-08-24T13:37:48",
       "peak_time": "2025-08-25T07:15:41",
       "duration": "17h37m",
       "duration_seconds": 63473,
@@ -139,7 +139,7 @@
       "filename": "sourdough-starter-15.mp4",
       "sequence": 15,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-08-28T13:39:36",
+      "feeding_start_time": "2025-08-28T13:39:36",
       "peak_time": "2025-08-28T21:14:12",
       "duration": "7h34m",
       "duration_seconds": 27276,
@@ -169,7 +169,7 @@
       "filename": "sourdough-starter-15.mp4",
       "sequence": 15,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-08-28T13:39:36",
+      "feeding_start_time": "2025-08-28T13:39:36",
       "peak_time": "2025-08-28T21:19:17",
       "duration": "7h39m",
       "duration_seconds": 27581,
@@ -199,7 +199,7 @@
       "filename": "sourdough-starter-15.mp4",
       "sequence": 15,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-08-28T13:39:36",
+      "feeding_start_time": "2025-08-28T13:39:36",
       "peak_time": "2025-08-28T21:30:36",
       "duration": "7h51m",
       "duration_seconds": 28260,
@@ -229,7 +229,7 @@
       "filename": "sourdough-starter-15.mp4",
       "sequence": 15,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-08-28T13:39:36",
+      "feeding_start_time": "2025-08-28T13:39:36",
       "peak_time": "2025-08-28T22:07:29",
       "duration": "8h27m",
       "duration_seconds": 30473,
@@ -259,7 +259,7 @@
       "filename": "sourdough-starter-15.mp4",
       "sequence": 15,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-08-28T13:39:36",
+      "feeding_start_time": "2025-08-28T13:39:36",
       "peak_time": "2025-08-28T22:06:28",
       "duration": "8h26m",
       "duration_seconds": 30412,
@@ -289,7 +289,7 @@
       "filename": "sourdough-starter-15.mp4",
       "sequence": 15,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-08-28T13:39:36",
+      "feeding_start_time": "2025-08-28T13:39:36",
       "peak_time": "2025-08-28T22:14:05",
       "duration": "8h34m",
       "duration_seconds": 30869,
@@ -319,7 +319,7 @@
       "filename": "sourdough-starter-17.mp4",
       "sequence": 17,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-09-02T19:39:58",
+      "feeding_start_time": "2025-09-02T19:39:58",
       "peak_time": "2025-09-03T03:13:34",
       "duration": "7h33m",
       "duration_seconds": 27216,
@@ -350,7 +350,7 @@
       "filename": "sourdough-starter-17.mp4",
       "sequence": 17,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-09-02T19:53:09",
+      "feeding_start_time": "2025-09-02T19:53:09",
       "peak_time": "2025-09-03T05:40:12",
       "duration": "9h47m",
       "duration_seconds": 35223,
@@ -381,7 +381,7 @@
       "filename": "sourdough-starter-17.mp4",
       "sequence": 17,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-09-02T19:39:58",
+      "feeding_start_time": "2025-09-02T19:39:58",
       "peak_time": "2025-09-03T06:31:27",
       "duration": "10h51m",
       "duration_seconds": 39089,
@@ -412,7 +412,7 @@
       "filename": "sourdough-starter-17.mp4",
       "sequence": 17,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-09-02T20:00:46",
+      "feeding_start_time": "2025-09-02T20:00:46",
       "peak_time": "2025-09-03T06:51:45",
       "duration": "10h50m",
       "duration_seconds": 39059,
@@ -443,7 +443,7 @@
       "filename": "sourdough-starter-17.mp4",
       "sequence": 17,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-09-02T20:11:56",
+      "feeding_start_time": "2025-09-02T20:11:56",
       "peak_time": "2025-09-03T08:14:57",
       "duration": "12h3m",
       "duration_seconds": 43381,
@@ -474,7 +474,7 @@
       "filename": "sourdough-starter-19.mp4",
       "sequence": 19,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-09-07T16:11:46",
+      "feeding_start_time": "2025-09-07T16:11:46",
       "peak_time": "2025-09-08T00:40:41",
       "duration": "8h28m",
       "duration_seconds": 30535,
@@ -504,7 +504,7 @@
       "filename": "sourdough-starter-19.mp4",
       "sequence": 19,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-09-07T16:32:04",
+      "feeding_start_time": "2025-09-07T16:32:04",
       "peak_time": "2025-09-08T03:52:48",
       "duration": "11h20m",
       "duration_seconds": 40844,
@@ -534,7 +534,7 @@
       "filename": "sourdough-starter-19.mp4",
       "sequence": 19,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-09-07T16:17:52",
+      "feeding_start_time": "2025-09-07T16:17:52",
       "peak_time": "2025-09-08T02:58:11",
       "duration": "10h40m",
       "duration_seconds": 38419,
@@ -564,7 +564,7 @@
       "filename": "sourdough-starter-19.mp4",
       "sequence": 19,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-09-07T16:25:28",
+      "feeding_start_time": "2025-09-07T16:25:28",
       "peak_time": "2025-09-08T03:20:30",
       "duration": "10h55m",
       "duration_seconds": 39302,
@@ -594,7 +594,7 @@
       "filename": "sourdough-starter-19.mp4",
       "sequence": 19,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-09-07T16:38:40",
+      "feeding_start_time": "2025-09-07T16:38:40",
       "peak_time": "2025-09-08T03:44:21",
       "duration": "11h5m",
       "duration_seconds": 39941,
@@ -624,7 +624,7 @@
       "filename": "sourdough-starter-18.mp4",
       "sequence": 18,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-09-06T18:31:42",
+      "feeding_start_time": "2025-09-06T18:31:42",
       "peak_time": "2025-09-07T13:03:22",
       "duration": "18h31m",
       "duration_seconds": 66700,
@@ -654,7 +654,7 @@
       "filename": "sourdough-starter-20.mp4",
       "sequence": 20,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-09-09T08:56:20",
+      "feeding_start_time": "2025-09-09T08:56:20",
       "peak_time": "2025-09-10T01:52:56",
       "duration": "16h56m",
       "duration_seconds": 60996,
@@ -684,7 +684,7 @@
       "filename": "sourdough-starter-21.mp4",
       "sequence": 21,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-09-10T13:17:22",
+      "feeding_start_time": "2025-09-10T13:17:22",
       "peak_time": "2025-09-11T11:57:57",
       "duration": "22h40m",
       "duration_seconds": 81635,
@@ -714,9 +714,9 @@
       "filename": "sourdough-starter-22.mp4",
       "sequence": 22,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-09-11T20:42:37",
+      "feeding_start_time": "2025-09-11T20:42:37",
       "peak_time": "2025-09-12T16:43:56",
-      "active_time_starts": "2025-09-12T05:40:26",
+      "active_start_time": "2025-09-12T05:40:26",
       "duration": "20h1m",
       "duration_seconds": 72079,
       "ratio": "1:5.1:5.1",
@@ -746,9 +746,9 @@
       "filename": "sourdough-starter-23.mp4",
       "sequence": 23,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-09-12T20:38:50",
+      "feeding_start_time": "2025-09-12T20:38:50",
       "peak_time": "2025-09-12T",
-      "active_time_starts": "2025-09-13T10:12:25",
+      "active_start_time": "2025-09-13T10:12:25",
       "duration": "20h1m",
       "duration_seconds": 72079,
       "ratio": "1:5:5",
@@ -758,9 +758,9 @@
       "filename": "sourdough-starter-24.mp4",
       "sequence": 24,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-09-13T21:07:31",
-      "active_time_starts": "2025-09-14T06:21:21",
-      "active_time_ends": "2025-09-14T16:55:46",
+      "feeding_start_time": "2025-09-13T21:07:31",
+      "active_start_time": "2025-09-14T06:21:21",
+      "active_end_time": "2025-09-14T16:55:46",
       "peak_time": "2025-09-13T18:21:32",
       "duration": "20h1m",
       "duration_seconds": 72079,
@@ -771,10 +771,10 @@
       "filename": "sourdough-starter-25.mp4",
       "sequence": 25,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-09-15T14:26:41",
-      "active_time_starts": "2025-09-16T01:20:40",
+      "feeding_start_time": "2025-09-15T14:26:41",
+      "active_start_time": "2025-09-16T01:20:40",
       "peak_time": "2025-09-16T15:31:43",
-      "active_time_ends": "2025-09-16T17:30:03",
+      "active_end_time": "2025-09-16T17:30:03",
       "duration": "",
       "duration_seconds": 72079,
       "ratio": "1:10:10",
@@ -785,10 +785,10 @@
       "filename": "sourdough-starter-26.mp4",
       "sequence": 26,
       "recipe": "arachnophobia",
-      "feeding_time_starts": "2025-09-16T17:39:54",
-      "active_time_starts": "",
+      "feeding_start_time": "2025-09-16T17:39:54",
+      "active_start_time": "",
       "peak_time": "",
-      "active_time_ends": "",
+      "active_end_time": "",
       "duration": "",
       "duration_seconds": 72079,
       "ratio": "1:5:5",
