--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -327,14 +327,24 @@
     },
     {
       "active_end_time": "",
-      "active_start_time": "",
+      "active_start_time": "2025-09-18T03:55:07",
       "feeding_start_time": "2025-09-17T17:51:14",
       "incomplete_record": true,
-      "peak_time": "",
+      "peak_time": "2025-09-18T19:27:22",
       "ratio": "1:10:10",
       "recipe": "arachnophobia",
       "sequence": 27,
       "starter_grams": "5"
+    },
+    {
+      "incomplete_record": true,
+      "active_end_time": "",
+      "active_start_time": "",
+      "feeding_start_time": "2025-09-18T20:57:30",
+      "peak_time": "",
+      "ratio": "1:5:5",
+      "recipe": "arachnophobia",
+      "starter_grams": "10"
     }
   ]
 }
