--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -339,7 +339,7 @@
     {
       "incomplete_record": true,
       "active_end_time": "",
-      "active_start_time": "",
+      "active_start_time": "2025-09-19:T07:34:37",
       "feeding_start_time": "2025-09-18T20:57:30",
       "peak_time": "",
       "ratio": "1:5:5",
