--- a/sourdough-starter-manifest.json
+++ b/sourdough-starter-manifest.json
@@ -369,8 +369,8 @@
     {
       "incomplete_record": true,
       "active_end_time": "",
-      "active_time": "2025-09-20T",
-      "feed_time": "2025-09-20T",
+      "active_time": "2025-09-23T03:04:46",
+      "feed_time": "2025-09-22T23:03:31",
       "peak_time": "",
       "ratio": "1:1:1",
       "recipe": "arachnophobia",
